# photo-management-api

./: .env.example  .gitignore  pyproject.toml
api/: urls.py
api/authentication/: serializers.py  services.py  urls.py  views.py
api/photo/: serializers.py  services.py  urls.py  views.py
api/profile/: serializers.py  services.py  urls.py  views.py
api/session/: serializers.py  services.py  urls.py  views.py
api/user/: serializers.py  services.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: api_versioning.py  authentication.py
database/: apps.py
database/management/commands/: create_profile.py  hello.py  seed.py
database/migrations/: 0001_initial.py
database/models/: __init__.py  base.py  photo.py  profile.py  session.py  session_user.py  user.py  user_profile.py
database/repositories/: __init__.py  photo.py  profile.py  session.py  user.py
helpers/: __init__.py  cache.py  exception.py  pagination.py  request.py  response.py  types.py  utils.py
middleware/: apps.py
middlewares/: apps.py
tasks/: __init__.py  scheduler.py  task_email.py  task_hello.py
tests/: __init__.py  test_case.py  test_runner.py
tests/authentication/: endpoints.py  test_services.py  test_views.py
tests/authentication/fixtures/: __init__.py
